--- a/src/components/MorePosts.astro
+++ b/src/components/MorePosts.astro
@@ -23,7 +23,7 @@ const posts = (await getCollection('blog'))
       <div class="relative max-w-xl">
         <div class="inline-flex items-center gap-3 mb-8">
           <span class="w-8 h-px bg-stone-200"></span>
-          <span class="font-mono text-sm text-stone-500 tracking-tight">
+          <span class="font-mono text-sm text-stone-500 tracking-wider">
             Continue Reading
           </span>
         </div>
