--- a/src/layouts/BasicPage.astro
+++ b/src/layouts/BasicPage.astro
@@ -33,7 +33,7 @@ const { title, description, heroImage } = Astro.props;
 					<div class="py-24 md:py-32">
 						<div class="relative max-w-3xl">
 							<div class="mb-16">
-								<h1 class="font-primary text-4xl sm:text-6xl md:text-7xl text-stone-900 leading-[1.15] tracking-tight">
+								<h1 class="font-primary text-4xl sm:text-6xl md:text-7xl text-stone-900 leading-[1.15] tracking-normal">
 									{title}
 								</h1>
 								{description && (
