--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			<Hero />
 
 			<!-- Recent Posts Section -->
-			<RecentPosts />
+			<!--<RecentPosts />-->
 
 			<!-- Popular Tags -->
 			<PopularTags />
